--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         font-family: Arial, sans-serif;
         background-color: #333333;
         color: white;
+        height: 100vh; /* Add this line */
+        overflow: hidden; /* Add this line */
       }
 
       h1 {
@@ -81,8 +83,8 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 100vw; /* Change width to viewport width */
+        height: 100vh;
         background-size: cover;
         background-position: center;
         z-index: 1000;
@@ -93,6 +95,8 @@
       #chat-messages {
         max-width: 600px;
         margin: 0 auto;
+        display: flex;
+        flex-direction: column-reverse; /* Add this line */
       }
 
       .chat-bubble {
@@ -102,6 +106,7 @@
         margin: 10px 0;
         display: flex;
         align-items: center;
+        order: -1; /* Add this line */
       }
 
       .chat-avatar {
@@ -115,11 +120,17 @@
         color: white;
       }
 
+      .user-uid {
+        margin-left: 10px;
+        font-size: 12px;
+        color: #999999;
+      }
+
       #chat-input-container {
         position: fixed;
         bottom: 0;
         left: 0;
-        width: 100%;
+        width: 100vw; /* Change width to viewport width */
         padding: 20px;
         background-color: rgba(0, 0, 0, 0.8);
         display: flex;
@@ -386,6 +397,10 @@
           const messageText = document.createElement("p");
           messageText.classList.add("chat-message");
           messageText.textContent = messageData.message;
+          const uidText = document.createElement("span");
+          uidText.classList.add("user-uid");
+          uidText.textContent = messageData.uid;
+          messageText.appendChild(uidText); // Append UID to message
           chatBubble.appendChild(messageText);
           chatMessages.appendChild(chatBubble);
           chatMessages.scrollTop = chatMessages.scrollHeight; // Auto-scroll to bottom
