--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <a
         href="#2"
         id="graveyard-link"
-        data-bg="https://t3.ftcdn.net/jpg/07/15/73/12/240_F_715731231_JmTdL2g9DGBCTLljtAHKMCK42mVtkXTk.jpg"
+        data-bg="https://support.discord.com/hc/article_attachments/1500017894801"
         >ディスコ霊園</a
       >
       <a
