--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
       }
 
       .chat-message {
-        color: white;
+        color: rgb(138, 137, 137);
       }
+
 
       .user-uid {
         margin-left: 10px;
