--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <a
         href="#1"
         id="chat-link"
-        data-bg="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ12ubbIEWcHOQOG3bMfyCb8VZfIHjp9AafuQ&s"
+        data-bg="https://i.ytimg.com/vi/Va6XuVOKkqo/maxresdefault.jpg"
         >総合雑談</a
       >
       <a
